fix(e2e): [ButtonGroup] Refactor example for test; fix `stretched` style

--- a/src/components/ButtonGroup/ButtonGroup.css
+++ b/src/components/ButtonGroup/ButtonGroup.css
@@ -4,6 +4,7 @@
 }
 
 .ButtonGroup--stretched {
+  display: flex;
   width: 100%;
 }
 
